--- a/.github/workflows/main_davidzhumsa.yml
+++ b/.github/workflows/main_davidzhumsa.yml
@@ -1,51 +1,99 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy container app to Azure Web App - davidzhumsa
+name: main_davidzhumsa
 
 on:
   push:
-    branches:
-      - main
-  workflow_dispatch:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
+env:
+  REGISTRY: ghcr.io
+  NODE_VERSION: '18.x'
+  IMAGE: msafrontend
+  AZURE_WEBAPP_NAME: davidzhumsa    
+  
 jobs:
   build:
-    runs-on: 'ubuntu-latest'
+    runs-on: ubuntu-latest
+    defaults:
+       run:
+         working-directory: ./frontend
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+      with:
+        ref: ${{ github.event.client_payload.sha }}
+          
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ env.NODE_VERSION }}
+        cache: 'npm'
+        cache-dependency-path: './frontend'
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Build
+      run: npm run build
+
+    - name: Test
+      run: npm run test --if-present
+
+  docker:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      contents: read
+      packages: write
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v3
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Log in to registry
+    - name: Set lower case owner name
+      run: |
+        echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
+      env:
+        OWNER: '${{ github.repository_owner }}'
+
+    - name: Log into registry ${{ env.REGISTRY }}
+      if: github.event_name != 'pull_request'
       uses: docker/login-action@v2
       with:
-        registry: https://ghcr.io/
-        username: ${{ secrets.AzureAppService_ContainerUsername_27361d7745e745a4ae33ab8415d4232a }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_cda470bd5b2848d99e8c3733d9ca078c }}
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build and push container image to registry
-      uses: docker/build-push-action@v3
+    - name: Build and push to container registry
+      uses: docker/build-push-action@v4
       with:
-        push: true
-        tags: ghcr.io/${{ secrets.AzureAppService_ContainerUsername_27361d7745e745a4ae33ab8415d4232a }}/dyzhuu/msafrontend:${{ github.sha }}
-        file: ./Dockerfile
-
+        context: ./frontend
+        file: frontend/Dockerfile
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ env.REGISTRY }}/${{ env.OWNER_LC  }}/${{ env.IMAGE  }}:${{ github.sha }}
+      
   deploy:
     runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    permissions:
+      contents: none
+    needs: docker
 
     steps:
-    - name: Deploy to Azure Web App
+    - name: Set lower case owner name
+      run: |
+        echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
+      env:
+        OWNER: '${{ github.repository_owner }}'
+
+    - name: 'Deploy to Azure Web App'
       id: deploy-to-webapp
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'davidzhumsa'
-        slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_20ceb328a502423d97914e68c2354b74 }}
-        images: 'ghcr.io/${{ secrets.AzureAppService_ContainerUsername_27361d7745e745a4ae33ab8415d4232a }}/dyzhuu/msafrontend:${{ github.sha }}'
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_FRONTEND }}
+        images: '${{ env.REGISTRY }}/${{ env.OWNER_LC }}/${{ env.IMAGE }}:${{ github.sha }}'
+ 
