--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p 80",
-    "lint": "next lint",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
@@ -29,7 +27,7 @@
     "graphql": "^16.7.1",
     "lucide-react": "^0.259.0",
     "next": "13.4.9",
-    "next-auth": "^4.22.1",
+    "next-auth": "^4.22.3",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -41,13 +39,6 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.27",
-    "@storybook/addon-interactions": "^7.0.27",
-    "@storybook/addon-links": "^7.0.27",
-    "@storybook/blocks": "^7.0.27",
-    "@storybook/nextjs": "^7.0.27",
-    "@storybook/react": "^7.0.27",
-    "@storybook/testing-library": "^0.0.14-next.2",
     "@types/node": "20.4.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "18.2.7",
@@ -56,7 +47,6 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-storybook": "^0.6.12",
     "prettier": "^3.0.0",
-    "storybook": "^7.0.27",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
