--- a/.gitignore
+++ b/.gitignore
@@ -477,3 +477,14 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+# next-pwa
+/public/sw.js
+/public/workbox-*.js
+/public/worker-*.js
+/public/fallback-*.js
+/public/precache.*.*.js.map
+/public/sw.js.map
+/public/workbox-*.js.map
+/public/worker-*.js.map
+/public/fallback-*.js
