--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-horizontal-scrolling-menu": "^4.1.0",
     "react-password-strength-bar": "^0.4.1",
     "sharp": "^0.32.3",
     "tailwind-merge": "^1.13.2",
