--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@tanstack/react-query": "^4.32.0",
+    "@tanstack/react-table": "^8.9.3",
     "@types/jsonwebtoken": "^9.0.2",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.1",
