--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,6 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
-    "cookies-next": "^2.1.2",
     "dotenv": "^16.3.1",
     "eslint-plugin-prettier": "^5.0.0",
     "graphql": "^16.7.1",
@@ -38,6 +37,7 @@
     "lucide-react": "^0.259.0",
     "next": "13.4.9",
     "next-auth": "^4.22.3",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
