--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "@types/node": "20.4.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "18.2.7",
+    "cypress": "^12.17.2",
     "eslint": "^8.44.0",
     "eslint-config-next": "^13.4.9",
     "eslint-config-prettier": "^8.8.0",
