--- a/backend/Backend.Api/Backend.Api.csproj
+++ b/backend/Backend.Api/Backend.Api.csproj
@@ -30,10 +30,13 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.9" />
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.6" />
     <PackageReference Include="Azure.Identity" Version="1.9.0" />
+    <PackageReference Include="FluentValidation" Version="11.6.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <None Remove="Repository\" />
+    <None Remove="Validators\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Backend.Core\Backend.Core.csproj">
@@ -48,5 +51,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Remove="appsettings.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Validators\" />
   </ItemGroup>
 </Project>
