--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 next dev",
     "build": "next build",
     "start": "next start -p 80",
     "lint": "next lint",
@@ -64,5 +64,5 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
-  "proxy": "https://dzmsabackend.azurewebsites.net"
+  "proxy": "https://localhost:7206"
 }
