--- a/.github/workflows/main_dzmsabackend.yml
+++ b/.github/workflows/main_dzmsabackend.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./backend
+        working-directory: ./api
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
