--- a/web/example.env
+++ b/web/example.env
@@ -1,6 +1,10 @@
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
 GITHUB_ID=
 GITHUB_SECRET=
+
 NEXTAUTH_SECRET=
 NEXTAUTH_URL=
+
+NEXT_PUBLIC_API_HOSTNAME
