--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,7 @@
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.3",
@@ -38,8 +38,8 @@
     "lucide-react": "^0.259.0",
     "next": "13.4.9",
     "next-auth": "^4.22.3",
-    "next-themes": "^0.2.1",
     "next-pwa": "^5.6.0",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -64,5 +64,8 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
-  "proxy": "https://localhost:7206"
+  "overrides": {
+    "@radix-ui/react-dismissable-layer": "^1.0.5",
+    "@radix-ui/react-focus-scope": "^1.0.4"
+  }
 }
